// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design management upload button component renders inverted upload design button 1`] = `
<div>
  <glbutton-stub
    class="btn-inverted"
    variant="primary"
  >
    
    Upload designs
    
    <!---->
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;

exports[`Design management upload button component renders loading icon 1`] = `
<div>
  <glbutton-stub
    class=""
    disabled="true"
    variant="primary"
  >
    
    Upload designs
    
    <glloadingicon-stub
      class="ml-1"
      color="orange"
      inline="true"
      label="Loading"
      size="sm"
    />
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;

exports[`Design management upload button component renders upload design button 1`] = `
<div>
  <glbutton-stub
    class=""
    variant="primary"
  >
    
    Upload designs
    
    <!---->
  </glbutton-stub>
   
  <input
    accept="image/*"
    class="hide"
    multiple="multiple"
    name="design_file"
    type="file"
  />
</div>
`;
